samples/_failures_safe/1761002277_7dc323_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f83a72a2.c: In function ‘next_token’:
./samples/SAFE/__tmp_f83a72a2.c:150:9: error: expected identifier at end of input
  150 |         int len = lexer->
      |         ^~~
./samples/SAFE/__tmp_f83a72a2.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f83a72a2.c:150:9: error: expected declaration or statement at end of input
